force-app/main/default/objects/Product_Plan__c/Product_Plan__c.object-meta.xml
<CustomObject>
    <label>Product Plan</label>
    <nameField>
        <label>Product Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>