force-app/main/default/objects/Product_Plan__c/fields/ATM_Fee_in_Other_Currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_Other_Currencies__c</fullName>
    <description>This value determines the ATM fee in other currencies.</description>
    <label>ATM Fee in Other Currencies</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>