force-app/main/default/objects/Product_Plan__c/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>This value determines the car replacement cost.</description>
    <label>Card Replacement Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>