force-app/main/default/objects/Product_Plan__c/fields/Cost_per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month__c</fullName>
    <description>This value determines the cost per calender month.</description>
    <label>Cost per Calendar Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>