force-app/main/default/objects/Product_Plan__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>This value determines the banking product plan.</description>
    <inlineHelpText>Select the banking plan.</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product</valueSetName>
    </valueSet>
</CustomField>